<resources>
    <string name="app_name">Happy Birthday</string>

    <!--details screen strings-->
    <string name="welcome_title">Happy Birthday</string>
    <string name="fill_out_form_text">Please fill out the form:</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="picture">Choose picture</string>
    <string name="show_birthday_button_text">Show birthday screen</string>

    <!--birthday screen strings-->
    <string name="birthday_name">Today %1s is</string>
    <string name="month_old">Month%1s old!</string>
    <string name="year_old">Year%1s old!</string>
    <string name="share_button_text">Share the news</string>

    <!--picture options-->
    <string name="gallery_select">Select from gallery</string>
    <string name="take_photo">Take a photo</string>
    <string name="cancel">Cancel</string>

</resources>
