<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_screen_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.nanit.robertlesser.happybirthday.Fragments.DetailsScreenFragment">

    <ImageView
        android:id="@+id/bottom_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/welcome_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textSize="@dimen/details_screen_title_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/fill_out_form_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_out_form_text"
        app:layout_constraintTop_toBottomOf="@+id/welcome_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/fill_out_form_textview_top_margin" />

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fill_out_form_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/name"
            android:enabled="true"/>

        <EditText
            android:id="@+id/birthday_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/birthday"
            android:enabled="true"/>

        <Button
            android:id="@+id/picture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/picture"
            android:enabled="true"/>

        <ImageView
            android:id="@+id/picture_image"
            android:layout_width="@dimen/details_screen_picture_image_size"
            android:layout_height="@dimen/details_screen_picture_image_size"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_menu_camera"/>

        <Button
            android:id="@+id/show_birthday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/show_birthday_button_text"
            android:enabled="false"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
